# leWN_finetune_toolkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
configs/: example.yaml  minimal.yaml  smoke.yaml
docs/: CHECKPOINTS.md  DATA_FORMAT.md
scripts/: evaluate.py  finetune.py  validate_dataset.py
src/lewm_finetune/: __init__.py  checkpointing.py  cli.py  config.py  data.py  evaluate.py  train.py  utils.py  validate.py
tests/: test_smoke.py
